@@ -1,3 +1,5 @@
+4488.	[port]		Darwin: use -framework for Kerberos. [RT #43418]
+
 4486.	[bug]		Look in $prefix/lib/pythonX.Y/site-packages for
 			the python modules we install. [RT #43330]
 
